Apply suggestions from code review
Co-authored-by: Alex O'Neill <35673674+alcatrazEscapee@users.noreply.github.com>